# advent-of-code-2023

./: .gitignore  pyproject.toml
Day1_Trebuchet/: main.py  testing.ipynb
Day2_Cube_Conundrum/: main.py
Day3_Gear_Ratios/: data.txt  task1.py  task2.py
Day4_Scratchcards/: task1.py
utils/: utils.py
