[tool.poetry]
name = "adventofcode2023"
version = "0.1.0"
description = "venv for the Advent of Code 2023"
authors = ["MaxGaipl <max@gaipl.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
numpy = "^1.26.2"
regex = "^2023.10.3"


[tool.poetry.group.dev.dependencies]
pandas = "^2.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
